--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,3 +7,20 @@
     @apply bg-slate-900;
   }
 }
+
+.custom-img {
+  object-fit: contain;
+  width: 100% !important;
+  position: relative !important;
+  height: unset !important;
+}
+
+.unset-img {
+  width: 100%;
+  position: relative;
+  height: 500px;
+}
+
+.unset-img > div {
+  position: unset !important;
+}
